src/test/ui/const-generics/derive-debug-array-wrapper.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/derive-debug-array-wrapper.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^

error[E0277]: `[u32; _]` doesn't implement `std::fmt::Debug`
  --> $DIR/derive-debug-array-wrapper.rs:6:5
   |
LL |     a: [u32; N],
   |     ^^^^^^^^^^^ `[u32; _]` cannot be formatted using `{:?}` because it doesn't implement `std::fmt::Debug`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `[u32; _]`
   = note: required because of the requirements on the impl of `std::fmt::Debug` for `&[u32; _]`
   = note: required for the cast to the object type `dyn std::fmt::Debug`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
